default imageBtn size

--- a/header-panel.less
+++ b/header-panel.less
@@ -6,6 +6,14 @@
         background-repeat: no-repeat;
         background-position: 8px 5px;
 
+        color: @text-secondary-color;
+
+        a.imageBtn {
+            height: 30px;
+            width: 30px;
+            float: left;
+        }
+
         &.showMessage{
             height: 80px;
         }
