--- a/header-panel.less
+++ b/header-panel.less
@@ -2,6 +2,14 @@
 
     .headerPanel{
 
+        color: @text-secondary-color;
+
+        a.imageBtn {
+            height: 30px;
+            width: 30px;
+            float: left;
+        }
+
         &.showMessage{
             height: 80px;
         }
