--- a/header-panel.less
+++ b/header-panel.less
@@ -2,6 +2,10 @@
 
     .headerPanel{
 
+        background-image: url('@{img-path}logo.png');
+        background-repeat: no-repeat;
+        background-position: 8px 5px;
+
         color: @text-secondary-color;
 
         a.imageBtn {
