--- a/footer-panel.less
+++ b/footer-panel.less
@@ -1,72 +1,7 @@
+@theme-img-path: '../../../themes/@{theme}/img/';
+
 #app {
-
     .footerPanel{
-
-        .options {
-            height: 41px;
-
-            a{
-                float: left;
-                margin-top: 10px;
-                margin-right: 15px;
-
-                &.embed{
-                    .icon-left(url('@{img-path}embed.png'), 20px, 35px);
-                    line-height: 22px;
-                }
-
-                &.download{
-                    .icon-left(url('@{img-path}download.png'), 20px, 30px);
-                    line-height: 22px;
-                }
-
-                &.fullScreen{
-                    .icon-right(url('@{img-path}fullscreen.png'), 20px, 30px);
-                    line-height: 22px;
-                    float: right;
-                    margin-right: 0;
-                }
-
-                &.exitFullscreen{
-                    .icon-right(url('@{img-path}exit_fullscreen.png'), 20px, 30px);
-                    line-height: 22px;
-                    float: right;
-                    margin-right: 0;
-                }
-            }
-
-            &.minimiseButtons{
-
-                a{
-
-                    &.embed{
-                        .hide-text();
-                        width: 27px;
-                    }
-
-                    &.fullScreen{
-                        .hide-text();
-                        width: 21px;
-                    }
-
-                    &.exitFullscreen{
-                        .hide-text();
-                        width: 21px;
-                    }
-
-                    &.normal{
-                        .hide-text();
-                        width: 21px;
-                    }
-                }
-            }
-
-        }
-
-        .searchOptions{
-            width: 425px;
-        }
-
         .searchPager {
             .controls{
                 .searchResultsInfo{
@@ -75,19 +10,4 @@
             }
         }
     }
-
-}
-
-#app.lightbox{
-
-    .footerPanel{
-        .options{
-            a.imageBtn{
-                &.normal{
-                    background: url('@{img-path}close_lightbox.png') no-repeat;
-                }
-            }
-        }
-    }
-
 }
