--- a/header-panel.less
+++ b/header-panel.less
@@ -1,26 +1,13 @@
+@theme-img-path: '../../../themes/@{theme}/img/';
+
 #app{
 
     .headerPanel{
 
-        color: @text-secondary-color;
-
-        a.imageBtn {
-            height: 30px;
-            width: 30px;
-            float: left;
-        }
-
-        &.showInformation{
-            height: 80px;
-        }
-
         .options{
-            height: 40px;
 
             .centerOptions{
-                margin: 5px 0 0 0;
                 width: 432px;
-                position: absolute;
 
                 .prevOptions {
                     margin: 0 10px 0 0;
@@ -40,54 +27,6 @@
                     margin: 0 0 0 10px;
                 }
             }
-
-            .rightOptions{
-                float: right;
-                margin: 6px 0 0 0;
-
-//              .help {
-//                  margin-left: 1em;
-//                  padding-right: 22px;
-//                  padding-bottom: 2px;
-//                  background: url('@{img-path}sprite.png');
-//                  background-repeat: no-repeat;
-//                  background-position: 0 -2999px;
-//                  margin-top: 6px;
-//              }
-
-                .settings{
-                    background: url('@{img-path}settings.png');
-                    height: 30px;
-                    width: 30px;
-                    margin-right: 8px;
-                }
-            }
-        }
-
-        .informationBox{
-            background: @brand-warning;
-            color: @gray-dark;
-            width: 100%;
-            position: absolute;
-            height: 40px;
-
-            .text{
-                float: left;
-                overflow: hidden;
-                margin: 13px;
-            }
-
-            .close{
-                float: right;
-                background-image: url('@{img-path}close_information_box.png');
-                background-repeat: no-repeat;
-                width: 17px;
-                height: 17px;
-                background-position: 4px 4px;
-                cursor: pointer;
-                margin: 12px;
-            }
         }
     }
-
 }
