--- a/header-panel.less
+++ b/header-panel.less
@@ -1,30 +1,54 @@
 @theme-img-path: '../../../themes/@{theme}/img/';
 
 #app{
-
     .headerPanel{
+        background-color: #d1d5da;
+        color: #000;
+
+        a.imageBtn {
+
+            &.first {
+                background-color: #000;
+                &:hover {
+                    background-color: #000;
+                }
+            }
+
+            &.prev {
+                background-color: #000;
+                &:hover {
+                    background-color: #000;
+                }
+            }
+
+            &.next {
+                background-color: #000;
+                &:hover {
+                    background-color: #000;
+                }
+            }
+
+            &.last {
+                background-color: #000;
+                &:hover {
+                    background-color: #000;
+                }
+            }
+        }
 
         .options{
-
             .centerOptions{
                 width: 432px;
-
-                .prevOptions {
-                    margin: 0 10px 0 0;
+            }
+            .rightOptions{
+                .settings{
+                    background: url('@{theme-img-path}settings.png');
                 }
-
-                .mode {
-                    label {
-                        width: 42px;
-                    }
+                .pagingToggle.one-up{
+                    background: url('@{theme-img-path}one_up.png');
                 }
-
-                .search {
-                    width: 140px;
-                }
-
-                .nextOptions {
-                    margin: 0 0 0 10px;
+                .pagingToggle.two-up{
+                    background: url('@{theme-img-path}two_up.png');
                 }
             }
         }
