--- a/header-panel.less
+++ b/header-panel.less
@@ -39,6 +39,24 @@
         .options{
             .centerOptions{
                 width: 432px;
+
+                .prevOptions {
+                    margin: 0 10px 0 0;
+                }
+
+                .mode {
+                    label {
+                        width: 42px;
+                    }
+                }
+
+                .search {
+                    width: 140px;
+                }
+
+                .nextOptions {
+                    margin: 0 0 0 10px;
+                }
             }
             .rightOptions{
                 .settings{
