--- a/footer-panel.less
+++ b/footer-panel.less
@@ -43,6 +43,7 @@
 
         .search {
             background-color: #408294;
+            border: 1px solid @gray-dark;
 
             .searchOptions{
                 margin-top: 2px;
@@ -66,7 +67,9 @@
         }
 
         .searchPager {
+            border: 1px solid @gray-dark;
             .controls{
+                margin-top: 0px;
                 width: 635px;
                 .searchResultsInfo{
                     width: 340px;
@@ -91,6 +94,10 @@
                     color: @brand-primary;
                 }
             }
+        }
+        
+        .searchOptions{
+            margin: 3px 0 0 0;
         }
     }
 }
