--- a/left-panel.less
+++ b/left-panel.less
@@ -4,8 +4,10 @@
             .thumbsView{
                 .thumbs{
                     .thumb{
-                        &.loadingFailed {
-                            background: url('@{img-path}padlock.png') no-repeat 50% 50%;
+                        .wrap{
+                            &.loadingFailed {
+                                background: url('@{img-path}padlock.png') no-repeat 50% 50%;
+                            }
                         }
 
                         &.selected {
