--- a/left-panel.less
+++ b/left-panel.less
@@ -6,7 +6,7 @@
                     .thumb{
                         .wrap{
                             &.loadingFailed {
-                                background: url('@{img-path}padlock.png') no-repeat 50% 50%;
+                                background: url('@{theme-img-path}padlock.png') no-repeat 50% 50%;
                             }
                         }
 
